Added JSpec tests.

--- a/java/build.xml
+++ b/java/build.xml
@@ -1,10 +1,13 @@
-<project default="clean-build">
+<?xml version="1.0" encoding="UTF-8"?>
+<project default="clean-install">
+
    <target name="clean">
-        <delete dir="build"/>
+        <delete dir="build" />
+        <delete file="../jsdoc.jar" />
     </target>
 
     <target name="compile">
-        <mkdir dir="build/classes"/>
+        <mkdir dir="build/classes" />
         <javac 
          srcdir="src" destdir="build/classes"
          classpath="./classes/js.jar"
@@ -12,14 +15,19 @@
     </target>
 
     <target name="jar">
-        <mkdir dir="build/jar"/>
+        <mkdir dir="build/jar" />
         <jar destfile="build/jar/jsdoc.jar" basedir="build/classes">
             <manifest>
-               <attribute name="Main-Class" value="Run"/>
-               <attribute name="Class-Path" value="./java/classes/js.jar"/>
+               <attribute name="Main-Class" value="Run" />
+               <attribute name="Class-Path" value="./java/classes/js.jar" />
             </manifest>
         </jar>
     </target>
-
-    <target name="clean-build" depends="clean,compile,jar"/>
+    
+    <target name="install">
+    	<copy file="build/jar/jsdoc.jar" tofile="../jsdoc.jar" overwrite="true" />
+	</target>
+	
+    <target name="clean-install" depends="clean,compile,jar,install" />
+    
 </project>
