Added support for dox-style @api tag. Fixed but that prevented "module" docspace from being applied to module names. Changed version number to be more compatible with semantic versions. Renamed about.json to package.json to be more compatible with commonjs.

--- a/build.xml
+++ b/build.xml
@@ -9,8 +9,8 @@
 	</tstamp>
 	
 	<target name="about">
-		<delete file="about.json" quiet="true"/>
-		<copy file="${build.templates}/about.json" tofile="about.json" >
+		<delete file="package.json" quiet="true"/>
+		<copy file="${build.templates}/package.json" tofile="package.json" >
 			<filterchain>
 				<replacetokens>
 					<token key="app.name" value="${app.name}" />
