--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
-	"app": {
-		"name": "jsdoc-3",
-		"version": "0.0.0+2010-07-04-2302"
-	}
+	"name": "jsdoc-3",
+	"version": "0.0.0",
+	"timestamp": "2010-07-16-1013",
+	"description": "An automatic documentation generator for javascript.",
+	"keywords": [ "documentation", "javascript" ],
+	"licenses": [
+		{
+			"type": "Apache 2.0",
+			"url": "http://www.apache.org/licenses/LICENSE-2.0"
+		}
+	],
+	"repositories": [
+		{
+			"type": "git",
+			"url": "http://github.com/micmath/JSDoc"
+		}
+	],
+	"bugs": "http://jsdoc.lighthouseapp.com/",
+	"maintainers": [
+		{
+			"name": "Michael Mathews",
+			"email": "micmath@gmail.com",
+			"web": "http://micmath.ws"
+		}
+    ]
 }
