Improved layout and css of params in the default template.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"repositories": [
 		{
 			"type": "git",
-			"url": "http://github.com/micmath/JSDoc"
+			"url": "http://github.com/micmath/jsdoc"
 		}
 	],
 	"contributors" : [
