Updated about info.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "jsdoc",
 	"version": "3.0.0beta1",
-	"revision": "2011-01-20-2310",
+	"revision": "2011-01-24-2242",
 	"description": "An automatic documentation generator for javascript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
@@ -13,7 +13,7 @@
 	"repositories": [
 		{
 			"type": "git",
-			"url": "http://github.com/micmath/jsdoc"
+			"url": "http://github.com/micmath/JSDoc"
 		}
 	],
 	"contributors" : [
