Update to build script to handle mirroring to svn.
git-svn-id: https://jsdoc.googlecode.com/svn/trunk/@8 d5942f49-e6af-b5c1-9d01-85772c7ca168

--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,13 @@
 		</copy>
 	</target>
 	
+	<target name="mirror">
+        <exec executable="/usr/local/git/bin/git">
+            <arg value="svn"/>
+            <arg value="dcommit"/>
+        </exec>
+    </target>
+	
 	<target name="jar-clean">
         <delete dir="build/java/build" />
         <delete file="jsdoc.jar" />
