--- a/build.xml
+++ b/build.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0"?>
  
-<project name="JSDoc-3" default="jar-install">
-	<property file="build/build.properties" />
-	<property name="build.templates" location="build/templates" />
-	
-	<tstamp>
-		<format property="NOW" pattern="yyyy-MM-dd-HHmm" locale="en,UK"/>
-	</tstamp>
-	
-	<target name="about">
-		<delete file="package.json" quiet="true"/>
-		<copy file="${build.templates}/package.json" tofile="package.json" >
-			<filterchain>
-				<replacetokens>
-					<token key="app.name" value="${app.name}" />
-					<token key="app.version" value="${app.version}" />
-					<token key="timestamp" value="${NOW}" />
-				</replacetokens>
-			</filterchain>
-		</copy>
-	</target>
-	
-	<target name="mirror">
+<project name="jsdoc" default="jar-install">
+
+    <property file="build/build.properties" />
+    <property name="build.templates" location="build/templates" />
+    
+    <tstamp>
+        <format property="NOW" pattern="yyyy-MM-dd-HHmm" locale="en,UK"/>
+    </tstamp>
+    
+    <!-- build the package.json file -->
+    <target name="about">
+        <delete file="package.json" quiet="true"/>
+        <copy file="${build.templates}/package.json" tofile="package.json" >
+            <filterchain>
+                <replacetokens>
+                    <token key="app.name" value="${app.name}" />
+                    <token key="app.version" value="${app.version}" />
+                    <token key="timestamp" value="${NOW}" />
+                </replacetokens>
+            </filterchain>
+        </copy>
+    </target>
+    
+    <!-- commit a copy of master to subversion -->
+    <target name="mirror">
         <exec executable="/usr/local/git/bin/git">
-            <arg value="svn"/>
-            <arg value="dcommit"/>
+            <arg value="svn" />
+            <arg value="dcommit" />
         </exec>
     </target>
-	
-	<target name="jar-clean">
+    
+    <!-- steps to build and install the jsdoc.jar file: clean, compile, build -->
+    <target name="jar-clean">
         <delete dir="build/java/build" />
         <delete file="jsdoc.jar" />
     </target>
@@ -59,8 +63,9 @@
         </jar>
     </target>
     
+    <!-- do all the steps to build and install the jsdoc.jar file -->
     <target name="jar-install" depends="jar-clean, jar-build">
-    	<copy file="build/java/build/jar/jsdoc.jar" tofile="jsdoc.jar" overwrite="true" />
-	</target>
+        <copy file="build/java/build/jar/jsdoc.jar" tofile="jsdoc.jar" overwrite="true" />
+    </target>
 
 </project>
