Use conf.json.EXAMPLE and .gitignore conf.json to changes don't affect repo status
To make it no impact, if JSDoc can't find a conf.json, it looks for conf.json.EXAMPLE and copies that over.

--- a/conf.json.EXAMPLE
+++ b/conf.json.EXAMPLE
@@ -2,14 +2,10 @@
     "tags": {
         "allowUnknownTags": true
     },
-    
     "source": {
         "includePattern": ".+\\.js(doc)?$",
         "excludePattern": "(^|\\/)_"
     },
-    
-    "plugins": [
-    ],
-    
+    "plugins": [],
     "jsVersion": 180
 }
