Readme additions and pull request instructions
The primary change is the addition of the HOW_TO_CONTRIBUTE file detailing the best way to make it easy for maintainers to merge pull requests.

--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
-	"name": "JSDoc",
-	"version": "3.0.0alpha",
-	"revision": "1323947228470",
-	"description": "An automatic documentation generator for javascript.",
-	"keywords": [ "documentation", "javascript" ],
-	"licenses": [
-		{
-			"type": "Apache 2.0",
-			"url":  "http://www.apache.org/licenses/LICENSE-2.0"
-		}
-	],
-	"repositories": [
-		{
-			"type": "git",
-			"url":  "git://github.com/micmath/jsdoc.git"
-		}
-	],
-	"bugs": "https://github.com/micmath/jsdoc/issues",
-	"contributors" : [
+    "name": "JSDoc",
+    "version": "3.0.0alpha",
+    "revision": "1323947228470",
+    "description": "An automatic documentation generator for javascript.",
+    "keywords": ["documentation", "javascript"],
+    "licenses": [
         {
-			"name":  "Michael Mathews",
-			"email": "micmath@gmail.com"
-		},
-        {
-			"name":  "Rafa\u0105 Wrzeszcz",
-			"email": "rafal.wrzeszcz@wrzasq.pl"
-		}
+            "type": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0"
+        }
     ],
-	"maintainers": [
-		{
-			"name":  "Michael Mathews",
-			"email": "micmath@gmail.com"
-		}
+    "repositories": [
+        {
+            "type": "git",
+            "url": "git://github.com/micmath/jsdoc.git"
+        }
+    ],
+    "bugs": "https://github.com/micmath/jsdoc/issues",
+    "contributors": [
+        {
+            "name": "Michael Mathews",
+            "email": "micmath@gmail.com"
+        }, 
+        {
+            "name": "Rafa\u0105 Wrzeszcz",
+            "email": "rafal.wrzeszcz@wrzasq.pl"
+        },
+        {
+            "name": "Jannon Frank",
+            "email": "jannon@jannon.net"
+        }
+    ],
+    "maintainers": [
+        {
+            "name": "Michael Mathews",
+            "email": "micmath@gmail.com"
+        },
+        {
+            "name": "Jannon Frank",
+            "email": "jannon@jannon.net"
+        }
     ]
 }
