disable JSHint's "lastsemic", "laxbreak", lax comma", "multistr", and "proto" relaxing options (no fixes required)

--- a/.jshintrc
+++ b/.jshintrc
@@ -26,14 +26,14 @@
   "funcscope":    false,
   "globalstrict": false,
   "iterator":     false,
-  "lastsemic":    true,
-  "laxbreak":     true,
-  "laxcomma":     true,
+  "lastsemic":    false,
+  "laxbreak":     false,
+  "laxcomma":     false,
   "loopfunc":     true,
-  "multistr":     true,
+  "multistr":     false,
   "onecase":      true,
-  "proto":        true,
   "regexdash":    true,
+  "proto":        false,
   "scripturl":    true,
   "shadow":       true,
   "smarttabs":    true,
