disable JSHint's "regexdash" relaxing option

--- a/.jshintrc
+++ b/.jshintrc
@@ -32,8 +32,8 @@
   "loopfunc":     true,
   "multistr":     false,
   "onecase":      true,
-  "regexdash":    true,
   "proto":        false,
+  "regexdash":    false,
   "scripturl":    true,
   "shadow":       true,
   "smarttabs":    true,
