disable JSHint's "smarttabs" relaxing option
and completely detab all files that have mixed spaces/tabs

--- a/.jshintrc
+++ b/.jshintrc
@@ -36,7 +36,7 @@
   "regexdash":    false,
   "scripturl":    true,
   "shadow":       false,
-  "smarttabs":    true,
+  "smarttabs":    false,
   "sub":          true,
   "supernew":     true,
   "validthis":    true,
