disable JSHint's "super new" and valid this" relaxing options (no fixes required)

--- a/.jshintrc
+++ b/.jshintrc
@@ -38,8 +38,8 @@
   "shadow":       false,
   "smarttabs":    false,
   "sub":          false,
-  "supernew":     true,
-  "validthis":    true,
+  "supernew":     false,
+  "validthis":    false,
 
   "browser":      false,
   "couch":        false,
