add self to contributors

--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         {
             "name": "Jannon Frank",
             "email": "jannon@jannon.net"
+        },
+        {
+            "name": "Jeff Williams",
+            "email": "jeffrey.l.williams@gmail.com"
         }
     ],
 	"maintainers": [
