--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "JSDoc",
 	"version": "3.0.0",
-	"revision": "1345064014682",
+	"revision": "1350231216174",
 	"description": "An automatic documentation generator for javascript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
@@ -16,6 +16,9 @@
 			"url":  "https://github.com/jsdoc3/jsdoc"
 		}
 	],
+	"dependencies": {
+		"markdown": "0.4.0"
+	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"contributors" : [
         {
