--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "JSDoc",
 	"version": "3.0.0",
-	"revision": "1350303594542",
+	"revision": "1350306006277",
 	"description": "An automatic documentation generator for javascript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
@@ -18,31 +18,36 @@
 	],
 	"dependencies": {
 		"markdown": "0.4.0",
-		"taffydb": "git://github.com/hegemonic/taffydb.git"
+		"taffydb":  "git://github.com/hegemonic/taffydb.git",
+		"wrench":   "1.3.9"
 	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"contributors" : [
-        {
+		{
 			"name":  "Michael Mathews",
 			"email": "micmath@gmail.com"
 		},
-        {
+		{
 			"name":  "Rafa\u0105 Wrzeszcz",
 			"email": "rafal.wrzeszcz@wrzasq.pl"
 		},
-        {
-            "name": "Jannon Frank",
-            "email": "jannon@jannon.net"
-        }
-    ],
+		{
+			"name": "Jannon Frank",
+			"email": "jannon@jannon.net"
+		}
+	],
 	"maintainers": [
 		{
 			"name":  "Michael Mathews",
 			"email": "micmath@gmail.com"
 		},
-        {
-            "name": "Jannon Frank",
-            "email": "jannon@jannon.net"
-        }
-    ]
+		{
+			"name": "Jannon Frank",
+			"email": "jannon@jannon.net"
+		},
+		{
+			"name": "Jeff Williams",
+			"email": "jeffrey.l.williams@gmail.com"
+		}
+	]
 }
