--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "JSDoc",
 	"version": "3.0.0",
-	"revision": "1350359612615",
+	"revision": "1350390807590",
 	"description": "An automatic documentation generator for javascript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
@@ -20,6 +20,7 @@
 		"js2xmlparser": "0.1.0",
 		"markdown": "0.4.0",
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
+		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
 	},
 	"devDependencies": {
