--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "JSDoc",
 	"version": "3.0.0",
-	"revision": "1350390807590",
+	"revision": "1350399199104",
 	"description": "An automatic documentation generator for javascript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
@@ -18,6 +18,7 @@
 	],
 	"dependencies": {
 		"js2xmlparser": "0.1.0",
+		"jsMD5": "git://github.com/hegemonic/jsMD5.git",
 		"markdown": "0.4.0",
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
 		"underscore": "1.4.2",
