--- a/conf.json.EXAMPLE
+++ b/conf.json.EXAMPLE
@@ -4,7 +4,7 @@
     },
     "source": {
         "includePattern": ".+\\.js(doc)?$",
-        "excludePattern": "(^|\\/)_"
+        "excludePattern": "(^|\\/|\\\\)_"
     },
     "plugins": [],
     "jsVersion": 180
