--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
 		"js2xmlparser": "0.1.0",
 		"jshint": "0.9.1",
 		"jsMD5": "git://github.com/hegemonic/jsMD5.git",
+		"lodash": "~0.9.0",
 		"markdown": "0.4.0",
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
-		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
 	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
