fix conf.json issues
- don't try to create conf.json if it doesn't exist (resolves a
permissions issue when installing with npm -g)
- add default values for recently added properties (hopefully fixes
Travis CI build)

--- a/conf.json.EXAMPLE
+++ b/conf.json.EXAMPLE
@@ -7,5 +7,10 @@
         "excludePattern": "(^|\\/|\\\\)_"
     },
     "plugins": [],
+    "templates": {
+        "docletFormat": "taffydb",
+        "cleverLinks": false,
+        "monospaceLinks": false
+    },
     "jsVersion": 180
 }
