Change package.json name to jsdoc3, jsdoc is taken

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "jsdoc",
+	"name": "jsdoc3",
 	"version": "3.2.0-dev",
 	"revision": "1366126973987",
 	"description": "An API documentation generator for JavaScript.",
