--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "jsdoc",
 	"version": "3.3.0-dev",
-	"revision": "1382895970480",
+	"revision": "1383193186575",
 	"description": "An API documentation generator for JavaScript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
@@ -26,6 +26,12 @@
 		"taffydb":  "git+https://github.com/hegemonic/taffydb.git",
 		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
+	},
+	"engines": {
+		"node": ">=0.10"
+	},
+	"scripts": {
+		"postinstall": "node ./node/postinstall.js"
 	},
 	"bin": {
 		"jsdoc": "./jsdoc.js"
