--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "jsdoc",
-	"version": "3.2.2",
-	"revision": "1383581570249",
+	"version": "3.2.3-dev",
+	"revision": "1383804183994",
 	"description": "An API documentation generator for JavaScript.",
 	"keywords": [ "documentation", "javascript" ],
 	"licenses": [
