update JSHint to 2.3.0, and only run it on Node.js

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,6 @@
 {
   "bitwise":      true,
+  "camelcase":    false,
   "curly":        true,
   "eqeqeq":       false,
   "forin":        true,
@@ -10,8 +11,9 @@
   "noempty":      false,
   "nonew":        true,
   "plusplus":     false,
-  "regexp":       false,
+  "quotmark":     false,
   "undef":        true,
+  "unused":       false,
   "strict":       false,
   "trailing":     false,
 
@@ -19,8 +21,7 @@
   "boss":         false,
   "debug":        false,
   "eqnull":       true,
-  "es5":          true,
-  "esnext":       true,
+  "esnext":       false,
   "evil":         false,
   "expr":         false,
   "funcscope":    false,
@@ -30,10 +31,9 @@
   "laxbreak":     false,
   "laxcomma":     false,
   "loopfunc":     true,
+  "moz":          true,
   "multistr":     false,
-  "onecase":      true,
   "proto":        false,
-  "regexdash":    false,
   "scripturl":    true,
   "shadow":       false,
   "smarttabs":    false,
@@ -49,9 +49,12 @@
   "mootools":     false,
   "node":         true,
   "nonstandard":  false,
+  "phantom":      true,
   "prototypejs":  false,
   "rhino":        true,
+  "worker":       false,
   "wsh":          false,
+  "yui":          false,
 
   "nomen":        false,
   "onevar":       false,
