--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
 	"name": "jsdoc",
 	"version": "3.3.0-dev",
-	"revision": "1387936297601",
+	"revision": "1387991255485",
 	"description": "An API documentation generator for JavaScript.",
-	"keywords": [ "documentation", "javascript" ],
+	"keywords": [
+		"documentation",
+		"javascript"
+	],
 	"licenses": [
 		{
 			"type": "Apache 2.0",
-			"url":  "http://www.apache.org/licenses/LICENSE-2.0"
+			"url": "http://www.apache.org/licenses/LICENSE-2.0"
 		}
 	],
 	"repository": {
 		"type": "git",
-		"url":  "https://github.com/jsdoc3/jsdoc"
+		"url": "https://github.com/jsdoc3/jsdoc"
 	},
 	"dependencies": {
 		"async": "0.1.22",
@@ -20,11 +23,13 @@
 		"esprima": "1.0.4",
 		"js2xmlparser": "0.1.0",
 		"marked": "0.2.8",
-		"taffydb":  "git+https://github.com/hegemonic/taffydb.git",
+		"taffydb": "git+https://github.com/hegemonic/taffydb.git",
 		"underscore": "1.4.2",
-		"wrench":   "1.3.9"
+		"wrench": "1.3.9"
 	},
 	"devDependencies": {
+		"grunt": "~0.4.2",
+		"grunt-bumpup": "~0.4.2",
 		"jshint": "2.3.0",
 		"tv4": "git+https://github.com/hegemonic/tv4.git#own-properties"
 	},
@@ -39,7 +44,7 @@
 	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"author": {
-		"name":  "Michael Mathews",
+		"name": "Michael Mathews",
 		"email": "micmath@gmail.com"
 	},
 	"contributors": [
