--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
 		"url": "https://github.com/jsdoc3/jsdoc"
 	},
 	"dependencies": {
-		"async": "0.1.22",
-		"catharsis": "0.7.0",
-		"esprima": "1.0.4",
-		"js2xmlparser": "0.1.0",
-		"marked": "0.2.8",
+		"async": "~0.1.22",
+		"catharsis": "~0.7.0",
+		"esprima": "~1.0.4",
+		"js2xmlparser": "~0.1.0",
+		"marked": "~0.2.8",
 		"taffydb": "git+https://github.com/hegemonic/taffydb.git",
-		"underscore": "1.4.2",
-		"wrench": "1.3.9"
+		"underscore": "~1.4.2",
+		"wrench": "~1.3.9"
 	},
 	"devDependencies": {
 		"grunt": "~0.4.2",
 		"grunt-bumpup": "~0.4.2",
-		"jshint": "2.3.0",
+		"jshint": "~2.3.0",
 		"tv4": "git+https://github.com/hegemonic/tv4.git#own-properties"
 	},
 	"engines": {
