--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# Development-related files and dependencies
+# Development-related files
 .tern-port
 node_modules/.bin
 node_modules/grunt*
-node_modules/jshint
-node_modules/tv4
 
 # User-specific files
 conf.json
