--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "jsdoc",
 	"version": "3.3.0-dev",
-	"revision": "1387991255485",
+	"revision": "1388036728129",
 	"description": "An API documentation generator for JavaScript.",
 	"keywords": [
 		"documentation",
@@ -30,7 +30,9 @@
 	"devDependencies": {
 		"grunt": "~0.4.2",
 		"grunt-bumpup": "~0.4.2",
+		"grunt-shell": "~0.6.1",
 		"jshint": "~2.3.0",
+		"load-grunt-tasks": "~0.2.1",
 		"tv4": "git+https://github.com/hegemonic/tv4.git#own-properties"
 	},
 	"engines": {
