--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "esprima": "~1.0.4",
     "js2xmlparser": "~0.1.0",
     "marked": "~0.2.8",
-    "taffydb": "git+https://github.com/hegemonic/taffydb.git",
+    "taffydb": "https://github.com/hegemonic/taffydb/tarball/master",
     "underscore": "~1.4.2",
     "wrench": "~1.3.9"
   },
@@ -34,7 +34,7 @@
     "grunt-shell": "~0.6.1",
     "istanbul": "~0.2.1",
     "load-grunt-tasks": "~0.2.1",
-    "tv4": "git+https://github.com/hegemonic/tv4.git#own-properties"
+    "tv4": "https://github.com/hegemonic/tv4/tarball/own-properties"
   },
   "engines": {
     "node": ">=0.10"
