--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-bumpup": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-eslint": "~0.4.0",
     "grunt-shell": "~0.6.1",
     "istanbul": "~0.2.1",
     "load-grunt-tasks": "~0.2.1",
