--- a/.eslintrc
+++ b/.eslintrc
@@ -118,7 +118,7 @@
         "semi": [2, "always"],
         "sort-vars": 0, // TODO: enable
         "space-in-brackets": 0, // TODO: enable?
-        "space-infix-ops": 0, // TODO: enable
+        "space-infix-ops": 2,
         "space-return-throw-case": 2,
         "space-unary-word-ops": 2,
         "wrap-regex": 0,
