--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "marked": "~0.3.1",
     "taffydb": "https://github.com/hegemonic/taffydb/tarball/master",
     "underscore": "~1.4.2",
-    "wrench": "~1.3.9"
+    "wrench": "~1.3.9",
+    "iconv-lite": "^0.2.11"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
