--- a/package.json
+++ b/package.json
@@ -28,12 +28,10 @@
     "wrench": "~1.3.9"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-bumpup": "~0.4.2",
-    "grunt-eslint": "~0.4.0",
-    "grunt-shell": "~0.6.1",
+    "gulp": "~3.6.2",
+    "gulp-bump": "~0.1.8",
+    "gulp-eslint": "~0.1.6",
     "istanbul": "~0.2.1",
-    "load-grunt-tasks": "~0.2.1",
     "tv4": "https://github.com/hegemonic/tv4/tarball/own-properties"
   },
   "engines": {
@@ -41,7 +39,7 @@
   },
   "scripts": {
     "postinstall": "node ./node/postinstall.js",
-    "test": "grunt test"
+    "test": "gulp test"
   },
   "bin": {
     "jsdoc": "./jsdoc.js"
