--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsdoc",
   "version": "3.3.0-dev",
-  "revision": "1401234887184",
+  "revision": "1402359726912",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
     "documentation",
@@ -23,6 +23,7 @@
     "esprima": "https://github.com/ariya/esprima/tarball/49a2eccb243f29bd653b11e9419241a9d726af7c",
     "js2xmlparser": "~0.1.0",
     "marked": "~0.3.1",
+    "requizzle": "~0.1.0",
     "taffydb": "https://github.com/hegemonic/taffydb/tarball/master",
     "underscore": "~1.6.0",
     "wrench": "~1.3.9"
@@ -38,7 +39,6 @@
     "node": ">=0.10"
   },
   "scripts": {
-    "postinstall": "node ./node/postinstall.js",
     "test": "gulp test"
   },
   "bin": {
