--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "js2xmlparser": "~0.1.0",
     "marked": "~0.3.1",
     "requizzle": "~0.1.0",
+    "strip-json-comments": "~0.1.3",
     "taffydb": "https://github.com/hegemonic/taffydb/tarball/master",
     "underscore": "~1.6.0",
     "wrench": "~1.3.9"
