ignore Requizzle module

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules/eslint
 node_modules/gulp*
 node_modules/istanbul
 
+# Node.js-only modules
+node_modules/requizzle
+
 # User-specific files
 conf.json
 
