--- a/.eslintrc
+++ b/.eslintrc
@@ -101,7 +101,7 @@
         "consistent-this": [2, "self"],
         "func-names": 0, // TODO: enable
         "func-style": 0,
-        "max-nested-callbacks": [2, 2],
+        "max-nested-callbacks": 0,
         "new-cap": 2,
         "new-parens": 2,
         "no-nested-ternary": 2,
