use the non-deprecated property for license info

--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "documentation",
     "javascript"
   ],
-  "licenses": [
-    {
-      "type": "Apache 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0"
-    }
-  ],
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/jsdoc3/jsdoc"
