--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,15 @@
 {
     "env": {
+        "jasmine": true,
         "node": true
     },
 
     "rules": {
         // Possible errors
+        "no-comma-dangle": 2,
         "no-cond-assign": 2,
         "no-console": 0,
         "no-constant-condition": 0,
-        "no-comma-dangle": 2,
         "no-control-regex": 2,
         "no-debugger": 2,
         "no-dupe-keys": 2,
@@ -19,10 +20,13 @@
         "no-extra-parens": 0,
         "no-extra-semi": 2,
         "no-func-assign": 2,
+        "no-inner-declarations": [2, "functions"],
         "no-invalid-regexp": 2,
+        "no-irregular-whitespace": 2,
         "no-negated-in-lhs": 2,
         "no-obj-calls": 2,
         "no-regex-spaces": 2,
+        "no-reserved-keys": 0,
         "no-sparse-arrays": 2,
         "no-unreachable": 2,
         "use-isnan": 2,
@@ -34,8 +38,8 @@
         "complexity": 0, // TODO: enable
         "consistent-return": 2,
         "curly": [2, "all"],
+        "default-case": 2,
         "dot-notation": 2,
-        "eol-last": 2,
         "eqeqeq": [2, "smart"],
         "guard-for-in": 2,
         "no-alert": 2,
@@ -45,15 +49,16 @@
         "no-empty-label": 2,
         "no-eq-null": 2,
         "no-eval": 2,
+        "no-extra-bind": 2,
         "no-extend-native": 2,
         "no-fallthrough": 2,
         "no-floating-decimal": 2,
         "no-implied-eval": 2,
-        "no-labels": 2,
         "no-iterator": 2,
+        "no-labels": 2,
         "no-lone-blocks": 2,
         "no-loop-func": 2,
-        "no-mixed-spaces-and-tabs": 2,
+        "no-multi-spaces": 2,
         "no-multi-str": 2,
         "no-native-reassign": 2,
         "no-new": 2,
@@ -61,23 +66,24 @@
         "no-new-wrappers": 2,
         "no-octal": 2,
         "no-octal-escape": 2,
+        "no-process-env": 2,
         "no-proto": 2,
         "no-redeclare": 2,
         "no-return-assign": 2,
         "no-script-url": 2,
         "no-self-compare": 2,
         "no-sequences": 2,
-        "no-trailing-spaces": 2,
-        "no-undefined": 0,
         "no-unused-expressions": 2,
+        "no-void": 2,
         "no-warning-comments": 0,
         "no-with": 2,
         "radix": 2,
+        "vars-on-top": 0,
         "wrap-iife": [2, "inside"],
         "yoda": 2,
 
         // Strict mode
-        "no-global-strict": 0,
+        "global-strict": 0,
         "no-extra-strict": 2,
         "strict": 2,
 
@@ -89,42 +95,66 @@
         "no-shadow-restricted-names": 2,
         "no-undef": 2,
         "no-undef-init": 2,
+        "no-undefined": 0,
         "no-unused-vars": 0,
         "no-use-before-define": 2,
 
         // Node.js
         "handle-callback-err": 2,
         "no-mixed-requires": 2,
+        "no-new-require": 2,
         "no-path-concat": 2,
         "no-process-exit": 2,
+        "no-restricted-modules": 0,
         "no-sync": 0,
 
         // Stylistic issues
         "brace-style": 0, // TODO: enable with "stroustrup" (or "1tbsp" + lots of cleanup)
         "camelcase": 2,
+        "comma-spacing": [2, {
+            "before": false,
+            "after": true
+        }],
+        "comma-style": [2, "last"],
         "consistent-this": [2, "self"],
-        "func-names": 0, // TODO: enable
+        "eol-last": 2,
+        "func-names": 0,
         "func-style": 0,
+        "key-spacing": [2, {
+            "beforeColon": false,
+            "afterColon": true
+        }],
         "max-nested-callbacks": 0,
         "new-cap": 2,
         "new-parens": 2,
-        "no-nested-ternary": 2,
         "no-array-constructor": 2,
+        "no-lonely-if": 2,
+        "no-mixed-spaces-and-tabs": 2,
+        "no-multiple-empty-lines": [2, {
+            "max": 2
+        }],
+        "no-nested-ternary": 2,
         "no-new-object": 2,
-        "no-spaced-func": 2,
         "no-space-before-semi": 2,
+        "no-spaced-func": 2,
         "no-ternary": 0,
+        "no-trailing-spaces": 2,
         "no-underscore-dangle": 0,
         "no-wrap-func": 2,
         "one-var": 0,
+        "padded-blocks": [2, "never"],
         "quotes": [2, "single", "avoid-escape"],
         "quote-props": 0,
         "semi": [2, "always"],
-        "sort-vars": 0, // TODO: enable
+        "sort-vars": 0,
+        "space-after-keywords": [2, "always"],
+        "space-before-blocks": [2, "always"],
         "space-in-brackets": 0, // TODO: enable?
+        "space-in-parens": 0, // TODO: enable?
         "space-infix-ops": 2,
         "space-return-throw-case": 2,
         "space-unary-word-ops": 2,
+        "spaced-line-comment": [2, "always"],
         "wrap-regex": 0,
 
         // Legacy
