--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "wrench": "~1.3.9"
   },
   "devDependencies": {
+    "eslint": "~0.9.1",
     "gulp": "~3.8.5",
     "gulp-eslint": "~0.1.7",
     "gulp-json-editor": "~2.0.2",
