--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "node": ">=0.10"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp lint; gulp test"
   },
   "bin": {
     "jsdoc": "./jsdoc.js"
